fixed projects section overlap when phonescreen window size

--- a/style.css
+++ b/style.css
@@ -767,7 +767,7 @@ html {
   .projects-container {
     justify-content: center;
     align-items: center;
-    margin-top: 900px;
+    margin-top: 1100px;
   }
 
   .project-display {
